--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        // java version
+        javaVersion = JavaVersion.VERSION_1_8
+
+        // app sdk version
+        compileSdkVersion = 29
+        targetSdkVersion = 29
+        minSdkVersion = 21
+
+        //library
+        kotlin_version = "1.4.0"
+        appcompat = "1.3.0-alpha02"
+        lifecycle = "2.2.0"
+        room = "2.2.5"
+        activity_ktx = "1.1.0-rc03"
+        fragment_ktx = "1.2.0-rc04"
+        core_ktx = "1.5.0-alpha02"
+        realm_version = "5.7.0"
+        osmdroid = "6.1.5"
+        play_services_location = "17.0.0"
+        play_services_maps = "17.0.0"
+        material = "1.2.0"
+
+        btle = "1.0.0"
+    }
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +44,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
